--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,7 +8,7 @@ jinja2==3.1.2
 # 数据处理和分析
 pandas==2.1.3
 numpy==1.24.3
-rpy2==3.5.13
+rpy2>=3.5.0
 
 # 认证和安全
 python-jose==3.3.0
@@ -37,5 +37,5 @@ pytest-asyncio==0.21.1
 
 # 其他实用工具
 pathlib2==2.3.7
-typing-extensions==4.8.0
+typing-extensions>=4.11.0
 colorama==0.4.6
